puerto DB añadido

--- a/proxectoSocialFilm/src/main/resources/application.properties
+++ b/proxectoSocialFilm/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.data.mongodb.database=proxecto
-server.port=8081
+spring.data.mongodb.database=proyecto
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
