--- a/proxectoSocialFilm/build.gradle
+++ b/proxectoSocialFilm/build.gradle
@@ -17,6 +17,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'com.github.java-json-tools:json-patch:1.13'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 test {
