--- a/proxectoSocialFilm/build.gradle
+++ b/proxectoSocialFilm/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.5.6'
     runtime 'io.jsonwebtoken:jjwt-impl:0.11.2'
     runtime 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 }
